# speckle-qgis

./: .gitignore  .pylintrc  Makefile  README.html  README.md  README.txt  __init__.py  installDependencies.py  metadata.txt  patch_version.py  pb_tool.cfg  pyproject.toml  resources.py  resources.qrc  speckle-qgsi.pyproject  speckle_qgis.py  speckle_qgis_dialog.py  speckle_qgis_dialog_base.ui  speckle_qgis_dialog_base.ui.autosave  subprocess_call.py
.circleci/: config.yml
.qt_for_python/uic/: speckle_qgis_dialog_base.py
help/source/: conf.py  index.rst
plugin_utils/: debugging_panel.py  env_var_qgis.bat  get_pip.py  helpers.py  installDependencies.py  installer.py  object_utils.py  patch_requirements.py  plugin_upload.py  reporting_issues.md  requirements.txt  requirements_mac.txt  runFromFile.py  subprocess_call.py  threads.py  traversal.py
scripts/: qgis_env.json  qgis_sys_paths.csv  tests.py
speckle/: DataStorage.py  dataStorage.py  geometry.py  logging.py  utils.py
speckle/automation/: Automation.md  addContext.py  addContext.ui  js.js  mapping_send.py  mapping_send.ui
speckle/binding/: ConnectorBindings.py
speckle/converter/: geometry.py  layers.py  utils.py
speckle/notifications/: SpeckleDashboard.py  UpdatesLogger.py  (+2 more)
test/: qgis_interface.py  test_qgis_environment.py  test_resources.py  test_speckle_qgis_dialog.py  test_translations.py  utilities.py
tests/: __init__.py  tests_unittest.py
tests_qgis/: __init__.py
ui/: ErrorWidget.py  LogWidget.py  add_stream_modal.py  add_stream_modal.ui  create_branch.py  create_branch.ui  create_stream.py  create_stream.ui  dockwidget_actions.py  dockwidget_populate.py  linkWidget.py  logger.py  main_form.py  main_form.ui  project_vars.py  speckle_qgis_dialog.py  speckle_qgis_dialog_base.ui  streamlist_dialog.py  streamlist_dialog.ui  validation.py  waitScreen.py
(+74 files in other folders)
