[tool.poetry]
name = "speckle-qgis"
version = "0.1.0"
description = "poetry for speckle-qgis"
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
numpy = "^1.25.2"
specklepy = "^2.16.0"
pyshp = "2.3.1"
requests = "2.31.0"
requests-toolbelt = "0.10.1"
urllib3 = "1.26.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
