[tool.poetry]
name = "speckle-qgis"
version = "0.1.0"
description = "poetry for speckle-qgis"
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
numpy = "^1.25.2"
specklepy = "2.17.12"
pyshp = "2.3.1"
requests = "2.31.0"
requests-toolbelt = "0.10.1"
urllib3 = "1.26.16"
shapely = "2.0.1"
geopandas = "0.13.2"
geovoronoi = "0.4.0"
scipy = "1.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-ordering = "^0.6"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
