[tool.poetry]
name = "speckle-qgis"
version = "0.1.0"
description = "poetry for speckle-qgis"
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
numpy = "1.26.4"
specklepy = "2.21.0"
pyshp = "2.3.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
urllib3 = "2.2.1"
geopandas = "0.13.2"
geovoronoi = "0.4.0"
scipy = "^1.13.0"
earcut = "1.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
devtools = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
